[tool.poetry]
name = "astrotoolz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "*", from = "src" }]


[tool.poetry.dependencies]
python = "3.11.*"
pandas="^2.1.4"
pyswisseph="2.10.3.2"
pytz="2023.3.post1"
Requests="2.31.0"
scipy="1.11.4"
swisseph="0.0.0.dev1"
timezonefinder="6.2.0"
pyhumps = "^3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
